test/syntax/fail/not_combinatorial/fun_node_call.sync
let node f x = x
let g x = f x
